add invalid response body test
